# noodle-ticket-generator

./: pyproject.toml
noodle_ticket_generator/: app.py  client.py
