[tool.poetry]
name = "noodle-ticket-generator"
version = "0.1.0"
description = ""
authors = ["Maxim <clownl3ss@icloud.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
flask = "^3.0.3"
python-barcode = "^0.15.1"
pillow = "^10.4.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
