[tool.poetry]
name = "noodle-ticket-generator"
version = "0.1.0"
description = ""
authors = ["Maxim <clownl3ss@icloud.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
python-barcode = "^0.15.1"
pillow = "^10.4.0"
websockets = "^13.0.1"
asyncio = "^3.4.3"

[tool.poetry.scripts]
poetry = 'poetry.console:run'
app = 'noodle_ticket_generator.app:main'

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
